本棚登録のサンプル実装

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -57,6 +57,6 @@ logger.play=INFO
 logger.application=DEBUG
 
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://localhost/bookshelf"
+db.default.url="jdbc:mysql://localhost/bookshelf?useUnicode=yes&characterEncoding=UTF-8"
 db.default.user=root
 db.default.password=cloud
