テーブルの内部カラムを変更。

--- a/.gitignore
+++ b/.gitignore
@@ -5,17 +5,18 @@
 !.gitignore
 
 # Ignore Play! working directory #
-db
-eclipse
-lib
+/bin
+/db
+/eclipse
+/lib
 /log
 /logs
 modules
 precompiled
 project/project
 project/target
-target
-tmp
+/target
+/tmp
 test-result
 server.pid
 *.iml
