DBのconnection数を設定

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -60,3 +60,7 @@ db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://localhost/bookshelf?useUnicode=yes&characterEncoding=UTF-8"
 db.default.user=root
 db.default.password=cloud
+
+db.default.partitionCount=1
+db.default.maxConnectionsPerPartition=5
+db.default.minConnectionsPerPartition=5
