日付をyyyy-MM-dd HH:mm:ssフォーマットで返すように修正。 DBのユーザーを一般のbs_userに変更。

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -58,8 +58,8 @@ logger.application=DEBUG
 
 db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://localhost/bookshelf?useUnicode=yes&characterEncoding=UTF-8"
-db.default.user=root
-db.default.password=cloud
+db.default.user=bs_user
+db.default.password=bs_user
 
 db.default.partitionCount=1
 db.default.maxConnectionsPerPartition=5
