DB操作をAnormからSlickに変更

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -57,7 +57,7 @@ logger.play=INFO
 logger.application=DEBUG
 
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://localhost/bookshelf?useUnicode=yes&characterEncoding=UTF-8"
+db.default.url="jdbc:mysql://localhost:3306/bookshelf?useUnicode=yes&characterEncoding=UTF-8"
 db.default.user=bs_user
 db.default.password=bs_user
 
