--- a/conf/prod.conf
+++ b/conf/prod.conf
@@ -1,4 +1,4 @@
-include application.conf
+include "application.conf"
 
 db.default.url="jdbc:mysql://ts.chaiuyqvmprz.ap-northeast-1.rds.amazonaws.com/bookshelf?useUnicode=yes&characterEncoding=UTF-8"
 db.default.user=ts
