Google+のキー情報をapplication.confに追加

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -64,3 +64,6 @@ db.default.password=bs_user
 db.default.partitionCount=1
 db.default.maxConnectionsPerPartition=5
 db.default.minConnectionsPerPartition=5
+
+application.client_id="881447546058.apps.googleusercontent.com"
+application.secret_id="Pa2UhdEQxC_o0HCu8ad-PzzS"
