--- a/conf/ci.conf
+++ b/conf/ci.conf
@@ -1,8 +1,8 @@
-include "application.conf"
+include "ci.application.conf"
 
-db.default.url="jdbc:mysql://localhost/bookshelf?useUnicode=yes&characterEncoding=UTF-8"
+db.default.url="jdbc:mysql://127.0.0.1:3306/bookshelf?useUnicode=yes&characterEncoding=UTF-8"
 db.default.user=root
-db.default.password=
+db.default.password=""
 
 application.client_id="881447546058-f3ref6v66g5tnkubcob4g6t1i35s78u4.apps.googleusercontent.com"
 application.secret_id="kjULMfVmRyavYKudXkK52TAi"
