マスキングしました

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -65,10 +65,10 @@ db.default.partitionCount=1
 db.default.maxConnectionsPerPartition=5
 db.default.minConnectionsPerPartition=5
 
-application.client_id="881447546058.apps.googleusercontent.com"
-application.secret_id="Pa2UhdEQxC_o0HCu8ad-PzzS"
+application.client_id="****"
+application.secret_id="****"
 
-aws.aws_access_key="AKIAIVEDKHXVD2U62VOA"
-aws.aws_secret_key="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"
+aws.aws_access_key="****"
+aws.aws_secret_key="****"
 aws.aws_associate_tag="derui09-22"
 aws.aws_endpoint_url="http://ecs.amazonaws.jp/onca/xml"
