--- a/conf/prod.conf
+++ b/conf/prod.conf
@@ -1,8 +1,8 @@
 include "application.conf"
 
 db.default.url="jdbc:mysql://ts.chaiuyqvmprz.ap-northeast-1.rds.amazonaws.com/bookshelf?useUnicode=yes&characterEncoding=UTF-8"
-db.default.user=ts
-db.default.password=openstream
+db.default.user=****
+db.default.password=****
 
-application.client_id="881447546058-f3ref6v66g5tnkubcob4g6t1i35s78u4.apps.googleusercontent.com"
-application.secret_id="kjULMfVmRyavYKudXkK52TAi"
+application.client_id="****"
+application.secret_id="****"
