設定ファイルに記載されていた内容のうち、パスワード/secretキーなどは登録されないように修正 fixed #100
CI用の設定ファイルだけはそのまま利用するように。

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ before_script:
 script:
   - mv conf/application.conf conf/ci.application.conf
   - mv conf/ci.conf conf/application.conf
+  - touch conf/aws.conf
+  - touch conf/secret.conf
   - sbt -DapplyEvolutions.default=true test
 before_install:
   - sudo apt-get update -qq
