--- a/conf/application.conf
+++ b/conf/application.conf
@@ -65,10 +65,5 @@ db.default.partitionCount=1
 db.default.maxConnectionsPerPartition=5
 db.default.minConnectionsPerPartition=5
 
-application.client_id="****"
-application.secret_id="****"
-
-aws.aws_access_key="****"
-aws.aws_secret_key="****"
-aws.aws_associate_tag="derui09-22"
-aws.aws_endpoint_url="http://ecs.amazonaws.jp/onca/xml"
+include "aws.conf"
+include "secrets.conf"
