--- a/conf/ci.conf
+++ b/conf/ci.conf
@@ -4,5 +4,5 @@ db.default.url="jdbc:mysql://127.0.0.1:3306/bookshelf?useUnicode=yes&characterEn
 db.default.user=root
 db.default.password=""
 
-application.client_id="881447546058-f3ref6v66g5tnkubcob4g6t1i35s78u4.apps.googleusercontent.com"
-application.secret_id="kjULMfVmRyavYKudXkK52TAi"
+application.client_id=""
+application.secret_id=""
