Travis CI用のconfファイルを編集

--- a/conf/ci.conf
+++ b/conf/ci.conf
@@ -6,3 +6,8 @@ db.default.password=""
 
 application.client_id=""
 application.secret_id=""
+
+aws.aws_access_key=""
+aws.aws_secret_key=""
+aws.aws_associate_tag=""
+aws.aws_endpoint_url=""
